--- a/style.css
+++ b/style.css
@@ -23,12 +23,28 @@
     --weight-semi-bold: 600;
     --weight-regular: 400;
     /* Size */
-
+    --size-border-radius: 4px;
 }
 
 /* Universal tags */
 * {
     box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    cursor: default;
+}
+
+a {
+    text-decoration: none;
+    color: var(--color-white);
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
 }
 
 /* Typography */
@@ -60,3 +76,32 @@ p {
     margin: 4px 0;
 }
 
+/* Navbar */
+#navbar {
+    display: flex;
+    justify-content: center;
+    background-color: var(--color-dark-pink);
+    align-items: center;
+    color: var(--color-white);
+    padding: 16px;
+}
+
+.navbar__logo {
+    font-size: medium;
+    font-weight: var(--weight-bold);
+}
+.navbar__menu {
+    display: flex;
+}
+.navbar__menu__item {
+    padding: 8px 12px;
+    margin: 0 4px;
+    cursor: pointer;
+}
+
+.navbar__menu__item.active {
+    color: var(--color-light-grey);
+}
+.navbar__menu__item:hover {
+    color: var(--color-light-grey);
+}
