--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ p {
 }
 .skillset__progress {
     display: flex;
-    gap: 15px;
+    flex-wrap: wrap;
     margin-bottom: 20px;
     justify-content: space-between;
 }
@@ -271,4 +271,98 @@ p {
 }
 .skillset__bottom {
     margin-top: 80px;
+}
+
+/*Projects*/
+
+.projets__categories {
+    margin: 40px;
+}
+.category__btn {
+    border:  1px solid var(--color-dark-white);
+    border-radius: 4px;
+    font-size: var(--font-regular);
+    padding: 8px 48px;
+}
+
+.category__btn.active,
+.category__btn:hover {
+    background-color: var(--color-pink);
+    color: var(--color-white);
+}
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+    opacity: 1;
+    top: 0;
+}
+
+.category__count {
+    background-color: orange;
+    border-radius: 50%;
+    color: var(--color-white);
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    line-height: 24px;
+    position: relative;
+    top: -20px;
+    left: 4px;
+    opacity: 0;
+    transition: all var(--animation-duration) ease;
+}
+
+.projects__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.project {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 280px;
+    height: 250px;
+    margin: 2px;
+    background-color: var(--color-light-white);
+}
+.project__img {
+    max-width: 100%;
+    max-height: 100%;
+    border: var(--color-light-white) solid 4px;
+}
+
+.project__description {
+    position: absolute;
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: all var(--animation-duration) ease-in;
+}
+
+.project:hover .project__description {
+    opacity: 0.8;
+    transform: translateY(0px);
+}
+.project__description h3 {
+    color: var(--color-white);
+}
+
+.project__description h3:after {
+    content: '';
+    width: 25px;
+    height: 2px;
+    background-color: var(--color-dark-white);
+    display: block;
+    position: relative;
+    left: 50%;
+    margin-left: -12px;
+    margin-top: 8px;
 }
