--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h1 {
 }
 
 h2 {
-    font-size: var(--font-regular);
+    font-size: var(--font-medium);
     font-weight: var(--weight-semi-bold);
     color: var(--color-black);
     margin: 8px 0;
@@ -242,7 +242,7 @@ p {
 
 /* skills */
 #skills {
-    background-color: var(--color-yellow);
+    background-color: beige;
 }
 
 .skillset {
@@ -377,3 +377,30 @@ p {
 }
 
 /* Contact */
+#contact {
+    background-color: var(--color-pink);
+}
+.contact__title,
+.contact__email,
+.contact__rights {
+    color: var(--color-white);
+}
+
+.contact__title {
+    margin: 32px 0;
+}
+
+.contact__links {
+    font-size: var(--font-large);
+    margin: 24px 0;
+}
+
+.contact__links i {
+    transition: all var(--animation-duration) ease;
+}
+
+.contact__links i:hover {
+    transform: 1.1;
+    color: aquamarine;
+    
+}
