--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ button {
     border: none;
     outline: none;
 }
+
 /* Typography */
 h1 {
     font-size: var(--font-large);
@@ -109,9 +110,11 @@ p {
     font-size: medium;
     font-weight: var(--weight-bold);
 }
+
 .navbar__menu {
     display: flex;
 }
+
 .navbar__menu__item {
     padding: 8px 12px;
     margin: 0 4px;
@@ -122,6 +125,7 @@ p {
     color: var(--color-black);
     font-weight: var(--weight-bold);
 }
+
 .navbar__menu__item:hover {
     color: var(--color-black);
     font-weight: var(--weight-bold);
@@ -140,10 +144,12 @@ p {
     background: url(imgs/background.png) center/cover no-repeat;
     text-align: center;
 }
+
 .home__logo {
     width: 400px;
     height: 400px;
 }
+
 .home__contact {
     font-size: var(--font-regular);
     font-weight: var(--weight-bold);
@@ -154,6 +160,7 @@ p {
     border-radius: 4px;
     color: var(--color-light-grey);
 }
+
 .home__contact:hover {
     border: 2px solid var(--color-white);
     color: var(--color-white);
@@ -175,12 +182,14 @@ p {
 #about {
     background-color: var(--color-light-white);
 }
+
 .about__intro {
     margin: 40px;
     display: flex;
     margin: 32px 0;
 }
-.about__photo img{
+
+.about__photo img {
     width: 150px;
     height: 250px;
     border-radius: 50%;
@@ -198,6 +207,7 @@ p {
     font-weight: var(--weight-semi-bold);
     color: var(--color-dark-grey);
 }
+
 .about__intro__description {
     color: var(--color-dark-grey);
 }
@@ -207,6 +217,7 @@ p {
     justify-content: space-between;
     margin: 80px 0;
 }
+
 .major__icon {
     width: 170px;
     height: 170px;
@@ -218,17 +229,21 @@ p {
     margin-bottom: 16px;
     color: var(--color-blue);
 }
+
 .major__icon i {
     transition: all var(--animation-duration) ease;
 }
 
-.major__icon:hover i{
+.major__icon:hover i {
     color: var(--color-pink);
     transform: rotate(-30deg) scale(1.1);
 }
-.major__title, .major__decription {
+
+.major__title,
+.major__decription {
     color: var(--color-dark-grey);
 }
+
 .major__decription {
     font-size: var(--font-small);
 }
@@ -243,9 +258,11 @@ p {
     text-align: left;
 }
 
-.job__name, .job__period {
+.job__name,
+.job__period {
     color: var(--color-light-grey);
 }
+
 .job__name {
     font-size: var(--font-small);
 }
@@ -264,9 +281,10 @@ p {
 }
 
 .skillset {
-    position:relative;
+    position: relative;
     padding: 5%;
 }
+
 .skillset__progress {
     display: flex;
     flex-wrap: wrap;
@@ -285,7 +303,7 @@ p {
 
 .title {
     background: var(--color-white);
-    position:absolute;
+    position: absolute;
     top: 50%;
     left: 50%;
     width: 80px;
@@ -296,6 +314,7 @@ p {
     font-size: var(--font-small);
     transform: translate(-50%, -50%);
 }
+
 .skillset__bottom {
     margin-top: 80px;
 }
@@ -305,11 +324,13 @@ p {
 .projets__categories {
     margin: 40px;
 }
+
 .category__btn {
-    border:  1px solid var(--color-dark-white);
+    border: 1px solid var(--color-dark-white);
     border-radius: 4px;
     font-size: var(--font-regular);
     padding: 8px 48px;
+    position: relative;
 }
 
 .category__btn.selected,
@@ -317,6 +338,7 @@ p {
     background-color: cadetblue;
     color: var(--color-white);
 }
+
 .category__btn.selected .category__count,
 .category__btn:hover .category__count {
     opacity: 1;
@@ -331,9 +353,9 @@ p {
     height: 24px;
     display: inline-block;
     line-height: 24px;
-    position: relative;
-    top: -20px;
-    left: 4px;
+    position: absolute;
+    margin-top: 5px;
+    right: 16px;
     opacity: 0;
     transition: all var(--animation-duration) ease;
 }
@@ -345,6 +367,7 @@ p {
     opacity: 1;
     transition: all var(--animation-duration) ease-out;
 }
+
 .project {
     position: relative;
     display: flex;
@@ -355,6 +378,7 @@ p {
     margin: 2px;
     background-color: var(--color-light-white);
 }
+
 .project__img {
     max-width: 100%;
     max-height: 100%;
@@ -380,6 +404,7 @@ p {
     opacity: 0.8;
     transform: translateY(0px);
 }
+
 .project__description h3 {
     color: orange;
 }
@@ -405,6 +430,7 @@ p {
 #contact {
     background-color: var(--color-pink);
 }
+
 .contact__title,
 .contact__email,
 .contact__rights {
@@ -427,7 +453,7 @@ p {
 .contact__links i:hover {
     transform: 1.1;
     color: aquamarine;
-    
+
 }
 
 /* Arrow */
@@ -439,16 +465,18 @@ p {
     font-size: var(--font-medium);
     color: var(--color-dark-grey);
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 50px;
+    right: 50px;
     opacity: 0;
     transition: opacity 300ms ease-in;
     pointer-events: none;
 }
+
 .visible {
     opacity: 1;
     pointer-events: auto;
 }
+
 /* project filter */
 .invisible {
     display: none;
@@ -456,48 +484,84 @@ p {
 
 /* 768px screen width */
 @media screen and (max-width: 768px) {
+    :root {
+        --font-large: 30px;
+        --font-medium: 18px;
+        --font-regular: 16px;
+        --font-small: 14px;
+        --font-micro: 12px;
+    }
+
+    .section {
+        padding: 16px;
+    }
+
     .navbar__toggle-btn {
         display: block;
     }
+
     #navbar {
         flex-direction: column;
         align-items: flex-start;
         opacity: 0.9;
         background-color: rgb(229, 175, 245);
     }
+
     .navbar__menu {
         flex-direction: column;
         text-align: center;
         width: 100%;
         display: none;
     }
+
     .navbar__menu.open {
         display: block;
     }
+
+    .about__intro {
+        flex-direction: column;
+    }
+
     .about__photo img {
         width: 80px;
         height: 130px;
     }
-    
+
+    .about__contents {
+        margin-top: 20px;
+    }
+
     .about__majors {
         flex-direction: column;
+        margin: 30px;
+        margin-bottom: 0;
     }
+
     .major {
-        margin: 38px;
+        margin: 30px;
     }
+
     .skillset__progress {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
     }
+
     .chart {
         margin: 28px;
     }
+
     .category__btn {
-        margin: 5px;
+        width: 100%;
+        margin: 5px 0;
     }
+
     .project {
         flex-grow: 1;
     }
-    
+
+    .arrow-up {
+        bottom: 20px;
+    }
+
 }
